--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+<string>To capture profile photo please grant camera access</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+<string>This app needs your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+<string>This app needs your location</string>
 </dict>
 </plist>
