--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.2.0+2
 
 environment:
   sdk: '>=3.2.5 <4.0.0'
@@ -44,7 +44,7 @@ dependencies:
   hexcolor: ^3.0.1
   firebase_database: ^10.4.0
   easy_refresh: ^3.3.4
-  location: ^5.0.3
+  fl_location: ^3.0.0
   flutter_map: ^6.1.0
   dio: ^5.4.0
   flutter_map_tile_caching: ^9.0.0-dev.5
